samples/_failures_safe/1761173565_d50785_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8577bb05.c: In function ‘main’:
./samples/SAFE/__tmp_8577bb05.c:151:9: error: expected declaration or statement at end of input
  151 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_8577bb05.c:151:9: error: expected declaration or statement at end of input
